# virtual-desktop-manager-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  history.en.md  todo.md  virtual-desktop-manager-manifest.rc  virtual-desktop-manager.exe.manifest
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml
crates/virtual-desktop-manager/: Cargo.toml  build.rs
crates/virtual-desktop-manager-core/: Cargo.toml
crates/virtual-desktop-manager-core/src/: auto_start.rs  block_on.rs  invisible_window.rs  lib.rs  quick_switch.rs  settings.rs  tray.rs  vd.rs  window_filter.rs
crates/virtual-desktop-manager-core/src/nwg_ext/: number_select.rs
crates/virtual-desktop-manager-core/src/tray_plugins/: apply_filters.rs  desktop_events.rs
crates/virtual-desktop-manager-gui/: Cargo.toml
crates/virtual-desktop-manager-gui-egui/: Cargo.toml
crates/virtual-desktop-manager-gui-egui/src/: lib.rs
crates/virtual-desktop-manager-gui-gpui/: Cargo.toml
crates/virtual-desktop-manager-gui-gpui/src/: lib.rs
crates/virtual-desktop-manager-gui-winsafe/: Cargo.toml
crates/virtual-desktop-manager-gui-winsafe/src/: config_window.rs  filter_options.rs  layout.rs  lib.rs  program_settings.rs
crates/virtual-desktop-manager-gui/src/: lib.rs
crates/virtual-desktop-manager-tray-icon/: Cargo.toml
crates/virtual-desktop-manager-tray-icon/src/: lib.rs
crates/virtual-desktop-manager/src/: main.rs
src/: change_elevation.rs  config_window.rs  dynamic_gui.rs  install-elevated-autostart.ps1  invisible_window.rs  lib.rs  main.rs  nwg_ext.rs  settings.rs  tray.rs  tray_icons.rs  vd.rs  window_filter.rs  window_info.rs  wm_msg_to_string.rs
src/nwg_ext/: number_select.rs
src/tray_plugins/: apply_filters.rs  desktop_events_dynamic.rs  hotkeys.rs  menus.rs  panic_notifier.rs
