[workspace]
resolver = "2"
members = [
    "crates/virtual-desktop-manager",
    "crates/virtual-desktop-manager-core",
    "crates/virtual-desktop-manager-gui",
    "crates/virtual-desktop-manager-gui-egui",
    "crates/virtual-desktop-manager-gui-gpui",
    "crates/virtual-desktop-manager-gui-winsafe",
    "crates/virtual-desktop-manager-tray-icon",
]

[workspace.package]
version = "0.1.11"
authors = ["Lej77 <31554212+Lej77@users.noreply.github.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/Lej77/virtual-desktop-manager-rs/"


# Minimize binary size (went from about 1180 kb to 950 kb), see
# https://github.com/johnthagen/min-sized-rust
#
# Note: can also rebuild std for about 30 kb smaller size with:
# cargo +nightly build -Z build-std=std --target x86_64-pc-windows-msvc --release
# Note: can remove location info for about 150kb smaller size (requires nightly) with:
# $env:RUSTFLAGS="-Zlocation-detail=none"
[profile.release]
# Note: disabled opt-level = "z" since it causes miscompilation for the ListView in ConfigWindow
#       (it can not be resorted because no OnListViewColumnClick event is received).
# opt-level = "z"   # Optimize for size.

# Note: disabled lto=true since it causes miscompilation for the nwg::Tab control.
# lto = true

codegen-units = 1


# It seems like native-windows-gui has a lot of UB, consider moving to an alternative crate like `winsafe`
# I got the following panic in a debug build with opt-level=1 when using nwg::Tab in a window:
# native-windows-gui-1.0.13\src\controls\tabs.rs:761:29: attempt to add with overflow
[profile.release.package.native-windows-gui]
# opt-level=1 causes miscompilation for nwg::Tab
# opt-level="z" causes miscompilation for nwg::ListView (it can not be re-sorted because no OnListViewColumnClick event is received)
opt-level = 0
codegen-units = 16

