[package]
name = "virtual-desktop-manager-gui-egui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Config window for the virtual desktop manager implemented using the egui library."

[features]
persist_filters = ["dep:serde", "dep:serde_json"]
persist_filters_xml = ["dep:serde"]
serde_path_to_error = ["dep:serde_path_to_error"]
global_hotkey = ["dep:global-hotkey"]

[dependencies]
virtual-desktop-manager-core = { path = "../virtual-desktop-manager-core", default-features = false }
native-windows-gui = "1.0.13"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] } # Manually handle some UI stuff
tracing = "0.1.41"
global-hotkey = { version = "0.7.0", optional = true }

serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
serde_json = { version = "1.0", optional = true }
serde_path_to_error = { version = "0.1.17", optional = true }

winit = "0.30.0"
egui = "0.33.0"
eframe = { version = "0.33.0", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

# File prompts:
rfd = "0.15.0" # File prompts
raw-window-handle = "0.6.2" # Used to set parent for file prompts (freezes parent window while they are open)

