[package]
name = "virtual-desktop-manager-gui"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
description = "Config window for the virtual desktop manager."

[features]
persist_filters = ["dep:serde", "dep:serde_json"]
persist_filters_xml = ["dep:serde"]
serde_path_to_error = ["dep:serde_path_to_error"]
global_hotkey = ["dep:global-hotkey"]

[dependencies]
virtual-desktop-manager-core = { path = "../virtual-desktop-manager-core", default-features = false }

native-windows-gui = "1.0.13"
native-windows-derive = "1.0.5"

tracing = "0.1.41"

windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] } # Manually handle some UI stuff

serde = { version = "1.0", optional = true, features = ["derive", "rc"] }
serde_json = { version = "1.0", optional = true }
serde_path_to_error = { version = "0.1.17", optional = true }

global-hotkey = { version = "0.7.0", optional = true }
